// Example from: https://java-programming.mooc.fi/part-9/2-interface

public interface Readable {
    String read();
}
